tweaked for field generation